--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/gurpreetatwal/leadership-connections#readme",
   "dependencies": {
     "convict": "^4.0.1",
+    "knex": "^0.14.1",
     "koa": "^2.4.1",
     "koa-router": "^7.3.0",
-    "koa-static": "^4.0.1"
+    "koa-static": "^4.0.1",
+    "pg": "^7.4.0"
   },
   "devDependencies": {
     "eslint": "^4.11.0"
