--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "koa-static": "^4.0.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^4.11.0"
