--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "homepage": "https://github.com/gurpreetatwal/leadership-connections#readme",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.20.0",
     "bluebird": "^3.5.5",
-    "convict": "^5.1.0",
-    "knex": "^0.19.5",
+    "convict": "^6.0.0",
+    "convict-format-with-validator": "^6.0.0",
+    "knex": "^0.21.5",
     "koa": "^2.5.2",
     "koa-body": "^2.6.0",
     "koa-router": "^7.4.0",
@@ -30,9 +31,9 @@
     "lodash": "^4.17.19",
     "moment": "^2.22.2",
     "pg": "^7.12.1",
-    "uuid": "^3.3.2"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "eslint": "^6.1.0"
+    "eslint": "^7.9.0"
   }
 }
